# AIS2202-estimation-template

./: .gitignore  CMakeLists.txt
data/results/: baseline_cont_wrench.csv  baseline_estimate.csv  baseline_unbiased.csv  output.csv  output1.csv
estimation/: kalman_filter.cpp
parameter_estimation/: CMakeLists.txt  Estimator.cpp  Estimator.hpp  main.cpp  util.hpp
plotter/: plotting.py
plotter/results/: baseline_cont_wrench.csv  baseline_estimate.csv  baseline_unbiased.csv  contact_cont_wrench.csv  contact_estimate.csv  contact_unbiased.csv  vibrations_cont_wrench.csv  vibrations_estimate.csv  vibrations_unbiased.csv
results/: plotting.py
results/data/: baseline_cont_wrench.csv  baseline_estimate.csv  baseline_high_cont_wrench.csv  baseline_high_estimate.csv  baseline_low_cont_wrench.csv  baseline_low_estimate.csv  baseline_mid_cont_wrench.csv  baseline_mid_estimate.csv  baseline_unbiased.csv  contact_estimate.csv  contact_high_cont_wrench.csv  contact_high_estimate.csv  contact_low_cont_wrench.csv  contact_low_estimate.csv  contact_mid_cont_wrench.csv  contact_mid_estimate.csv  contact_mid_unbiased.csv  vibrations_cont_wrench.csv  vibrations_high_cont_wrench.csv  (+6 more)
state_estimation/: CMakeLists.txt  main.cpp
state_estimation/include/: Estimator.hpp  Fusion.hpp  Kalman_filter.hpp  Variance.hpp  kalman_filter.hpp  state_space_model.hpp  temp.hpp
state_estimation/python/: Kalman.ipynb
state_estimation/src/: CMakeLists.txt  Estimator.cpp  Fusion.cpp  Kalman_filter.cpp  Variance.cpp  kalman_filter.cpp  state_space_model.cpp  temp.cpp  util.cpp
state_estimation_v2/: CMakeLists.txt
state_estimation_v2/src/: CMakeLists.txt  Fusion.cpp  Kalman_filter.cpp
(+3 files in other folders)
